--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.8",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.5.0"
+    "cookie": "^0.5.0",
+    "d3-force": "^3.0.0",
+    "d3-hierarchy": "^3.1.2",
+    "layercake": "^6.1.0"
   }
 }
